--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ console.log = function() {}
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
    <div class="header">
         	Mini <img src="https://img.icons8.com/color/48/000000/google-logo.png"/>oogle</div>
-    <center>  
+    <center> <div class="form-body"> 
        <input type=text id="no" placeholder="">
        <p align="center">
        <button onclick="ro()" class="submit">Search</button></p>
