--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ function ro()
     }
     else if(wo[i]==="Hello" || wo[i]==="hello"||wo[i]==="Hi"||wo[i]==="hi"||wo[i]==="name"||wo[i]==="Name"||wo[i]==="HELLO"||wo[i]==="NAME")
     {   
-    flag=2; document.getElementById('ans').innerHTML="Hello "+nm+" my name is Driod-R!.";
+    flag=2; document.getElementById('ans').innerHTML="Hello "+nm+" my name is Mini Google";
     text="Hello "+nm+" my name is Mini Google";
     responsiveVoice.speak(text);
     
