--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ function ro()
        weekday[4] = "Thursday";
         weekday[5] = "Friday";
         weekday[6] = "Saturday";
-      var day = weekday[d.getDay()];
-       text="It's " +day;
+      var dd = weekday[d.getDay()];
+       text="It's " +dd;
        responsiveVoice.speak(text);
     }
     else if(wo[i]==="Hello" || wo[i]==="hello"||wo[i]==="Hi"||wo[i]==="hi"||wo[i]==="name"||wo[i]==="Name"||wo[i]==="HELLO"||wo[i]==="NAME")
