--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ function ro()
        text="Current Time is " +t;
        responsiveVoice.speak(text);
     }
-    else if(wo[i]==="Day" || wo[i]==="Day")
+    else if(wo[i]==="day" || wo[i]==="Day")
     {
        flag=2;
        var day= new Date();
