--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ if(flag==1)
     
     var str="http://www.google.com/search?hl=en&source=hp&q=" + com + "&aq=f&oq=&aqi=";
 var replaced=str.replace(" ","+");
-window.open(URL, '_blank');
+window.location.replace(replaced);
 }
 
 }
