--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@ function ro()
        weekday[4] = "Thursday";
         weekday[5] = "Friday";
         weekday[6] = "Saturday";
-      var dd = weekday[d.getDay()];
-document.getElementById('ans').innerHTML="Current Time is " +dd;
-       text="It's " +dd;
+      var tday = weekday[day.getDay()];
+document.getElementById('ans').innerHTML="Current Time is " +tday;
+       text="It's " +tday;
        responsiveVoice.speak(text);
     }
     else if(wo[i]==="Hello" || wo[i]==="hello"||wo[i]==="Hi"||wo[i]==="hi"||wo[i]==="name"||wo[i]==="Name"||wo[i]==="HELLO"||wo[i]==="NAME")
