--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ function ro()
         weekday[5] = "Friday";
         weekday[6] = "Saturday";
       var tday = weekday[day.getDay()];
-document.getElementById('ans').innerHTML="Current Time is " +tday;
+document.getElementById('ans').innerHTML="It's " +tday;
        text="It's " +tday;
        responsiveVoice.speak(text);
     }
