--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@ document.getElementById('ans').innerHTML="It's " +tday;
        text="It's " +tday;
        responsiveVoice.speak(text);
     }
+
     else if(wo[i]==="Hello" || wo[i]==="hello"||wo[i]==="Hi"||wo[i]==="hi"||wo[i]==="name"||wo[i]==="Name"||wo[i]==="HELLO"||wo[i]==="NAME")
     {   
-    flag=2; document.getElementById('ans').innerHTML="Hello "+nm+" my name is Mini Google";
+    flag=2; document.getElementById('ans').innerHTML="Hello  my name is Mini Google";
     text="Hello  my name is Mini Google";
     responsiveVoice.speak(text);
     
