--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ else if(wo[i]==="morning"||wo[i]==="Morning"||wo[i]==="noon"||wo[i]==="Noon"||wo
     flag=2;
     responsiveVoice.speak(text);
 }
-else if(wo[i]==="Mini Google"||wo[i]==="Mini Google")
+else if(wo[i]==="mini google"||wo[i]==="Mini Google"||wo[i]==="Mini google")
 {
     text=" Yes Master can I help you?";
     document.getElementById('ans').innerHTML=text;
