--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@ if(flag==1)
     
     var str="http://www.google.com/search?hl=en&source=hp&q=" + com + "&aq=f&oq=&aqi=";
 var replaced=str.replace(" ","+");
-window.location.replace(replaced);
+
+window.open(".replace(replaced)", "_blank");
 }
 
 }
