--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ if(flag==1)
     var str="http://www.google.com/search?hl=en&source=hp&q=" + com + "&aq=f&oq=&aqi=";
 var replaced=str.replace(" ","+");
 
-window.open(.replace(replaced), "_blank");
+window.open(replace(replaced), "_blank");
 }
 
 }
