--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@ else if(wo[i]==="morning"||wo[i]==="Morning"||wo[i]==="noon"||wo[i]==="Noon"||wo
     flag=2;
     responsiveVoice.speak(text);
 }
-else if(wo[i]==="Hello" || wo[i]==="hello"||wo[i]==="Hi"||wo[i]==="hi")
+else if(wo[i]==="Hello" || wo[i]==="hello"||wo[i]==="Hi"||wo[i]==="hi"||wo[i]==="hii"||wo[i]==="Hii"||wo[i]==="Hiii"||wo[i]==="hiii")
 {
-    text=" Yes Master";
+    text="Hello Master";
     document.getElementById('ans').innerHTML=text;
     flag=2;
     responsiveVoice.speak(text);
