--- a/index.html
+++ b/index.html
@@ -127,17 +127,62 @@ document.getElementById('ans').innerHTML="It's " +tday;
 else if(wo[i]==="weather" || wo[i]==="Weather"|| wo[i]==="Current Weather")
     {
        flag=2;
-       var weather=prompt("Enter your City Name");
-      const apiKey="89ef8a05b6c964f4cab9e2f97f696c81";
-      const url = `https://api.openweathermap.org/data/2.5/weather?q=+weather+&appid=${apiKey}&units=metric`;
-      fetch(url)
-    .then(response => response.json())
-    .then(data => {
-      const { main, name, sys, weather } = data;
+       const weather = {};  
+  
+weather.temperature = {  
+    unit : "celsius"  
+}  
+  
+const KELVIN = 273;  
+  
+const key = "89ef8a05b6c964f4cab9e2f97f696c81";  
+  
+if('geolocation' in navigator){  
+    navigator.geolocation.getCurrentPosition(setPosition, showError);  
+}else{  
+    notificationElement.style.display = "block";  
+    document.getElementById('ans').innerHTML = "<p>Browser doesn't Support Geolocation</p>";  
+}  
+  
+function setPosition(position){  
+    let latitude = position.coords.latitude;  
+    let longitude = position.coords.longitude;  
+      
+    getWeather(latitude, longitude);  
+}  
+  
+function showError(error){  
+    notificationElement.style.display = "block";  
+    notificationElement.innerHTML = `<p> ${error.message} </p>`;  
+}  
+  
+function getWeather(latitude, longitude){  
+    let api = `http://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=${key}`;  
+      
+    fetch(api)  
+        .then(function(response){  
+            let data = response.json();  
+            return data;  
+        })  
+        .then(function(data){  
+            weather.temperature.value = Math.floor(data.main.temp - KELVIN);  
+            weather.description = data.weather[0].description;  
+            weather.iconId = data.weather[0].icon;  
+            weather.city = data.name;  
+            weather.country = data.sys.country;  
+        })  
+        .then(function(){  
+            displayWeather();  
+        });  
+}  
+  
+function displayWeather(){  
+   document.getElementById('ans').innerHTML = `<img src="icons/${weather.iconId}.png"/>`;  
+   document.getElementById('ans').innerHTML = `${weather.temperature.value}°<span>C</span>`;  
+    document.getElementById('ans').innerHTML = weather.description;  
+    document.getElementById('ans').innerHTML = `${weather.city}, ${weather.country}`;  
+} 
 
-document.getElementById('ans').innerHTML="Current weather" +data;
-       text="Current weather" +data;
-       responsiveVoice.speak(text);
     }
 
     else if(wo[i]==="name"||wo[i]==="Name"||wo[i]==="Your name"||wo[i]==="NAME")
