--- a/index.html
+++ b/index.html
@@ -161,23 +161,12 @@ function getWeather(latitude, longitude){
         .then(function(response){  
             let data = response.json();  
             return data;  
+
         })  
-        .then(function(data){  
-            weather.temperature.value = Math.floor(data.main.temp - KELVIN);  
-            weather.description = data.weather[0].description;  
-            weather.iconId = data.weather[0].icon;  
-            weather.city = data.name;  
-            weather.country = data.sys.country;  
-        })  
-        .then(function(){  
-            displayWeather();  
-        });  
-}  
   
-function displayWeather(){  
-   document.getElementById('ans').innerHTML = `${weather.temperature.value}°<span>C</span>`;  
-    document.getElementById('ans').innerHTML = weather.description;  
-    document.getElementById('ans').innerHTML = `${weather.city}, ${weather.country}`;  
+   document.getElementById('ans').innerHTML = data;  
+responsiveVoice.speak(text);
+  
 } 
 
     }
