--- a/index.html
+++ b/index.html
@@ -161,12 +161,10 @@ function getWeather(latitude, longitude){
         .then(function(response){  
             let data = response.json();  
             return data;  
-
-        })  
-  
-   document.getElementById('ans').innerHTML = data;  
+text="Weather " +data;
+document.getElementById('ans').innerHTML = text;  
 responsiveVoice.speak(text);
-  
+        })
 } 
 
     }
