--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
 
 	<script language="javascript" src="backend.js"></script>
-    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+   <script src="https://code.responsivevoice.org/responsivevoice.js?key=LtQTfKDb"></script>
    <div class="header">
         	Mini <img src="https://img.icons8.com/color/48/000000/google-logo.png"/>oogle</div>
     <center> <div class="form-body"> 
